[package]

name = "shiplift"
version = "0.6.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A Rust interface for maneuvering Docker containers"
documentation = "https://docs.rs/shiplift"
homepage = "https://github.com/softprops/shiplift"
repository = "https://github.com/softprops/shiplift"
keywords = ["docker", "unix", "containers", "hyper", "ship"]
license = "MIT"
edition = "2018"
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/shiplift" }
coveralls = { repository = "softprops/shipflit" }
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.11.0"
bytes = "0.4.12"
chrono = { version = "0.4.9", optional = true, features = ["serde"] }
flate2 = "1.0.13"
http = "0.2.0"
hyper = "0.13.1"
hyper-openssl = { version = "0.8.0-alpha.4", optional = true }
hyperlocal = { git="https://github.com/danieleades/hyperlocal", branch="update-hyper", optional = true }
log = "0.4.8"
mime = "0.3.14"
openssl = { version = "0.10.25", optional = true, features = ["vendored"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
tar = "0.4.26"
url = "2.1.0"
futures_codec = "0.3.1"
futures-util = "0.3.1"
pin-project = "0.4.6"
tokio = "0.2.6"


[dev-dependencies]
env_logger = "0.7.1"
futures = "0.3.1"
tokio = { version = "0.2.6", features = ["macros"] }

[features]
default = ["chrono", "unix-socket", "tls"]
unix-socket = ["hyperlocal"]
tls = ["openssl", "hyper-openssl"]
