[package]

name = "shiplift"
version = "0.6.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A Rust interface for maneuvering Docker containers"
documentation = "https://docs.rs/shiplift"
homepage = "https://github.com/softprops/shiplift"
repository = "https://github.com/softprops/shiplift"
keywords = ["docker", "unix", "containers", "hyper", "ship"]
license = "MIT"
edition = "2018"
readme = "README.md"

[badges]
travis-ci = { repository = "softprops/shiplift" }
coveralls = { repository = "softprops/shipflit" }
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.11"
byteorder = "1.3"
bytes = "0.4"
chrono = { version = "0.4", optional = true, features = ["serde"] }
flate2 = "1.0"
futures-util = "0.3"
futures_codec = "0.3"
hyper = "0.13"
hyper-openssl = { version = "0.8", optional = true }
hyperlocal = { version = "0.7", optional = true }
log = "0.4"
mime = "0.3"
openssl = { version = "0.10", optional = true }
pin-project = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = "0.2"
url = "2.1"

[dev-dependencies]
env_logger = "0.7"
# Required for examples to run
futures = "0.3.1"
tokio = { version = "0.2.6", features = ["macros"] }

[features]
default = ["chrono", "unix-socket", "tls"]
unix-socket = ["hyperlocal"]
tls = ["openssl", "hyper-openssl"]
vendored-ssl = ["tls", "openssl/vendored"]

[[example]]
name = "attach"
path = "examples/attach.rs"

[[example]]
name = "containercopyfrom"
path = "examples/containercopyfrom.rs"

[[example]]
name = "containercopyinto"
path = "examples/containercopyinto.rs"

[[example]]
name = "containercreate"
path = "examples/containercreate.rs"

[[example]]
name = "containerdelete"
path = "examples/containerdelete.rs"

[[example]]
name = "containerexec"
path = "examples/containerexec.rs"

[[example]]
name = "containerinspect"
path = "examples/containerinspect.rs"

[[example]]
name = "containers"
path = "examples/containers.rs"

[[example]]
name = "custom_host"
path = "examples/custom_host.rs"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "export"
path = "examples/export.rs"

[[example]]
name = "imagebuild"
path = "examples/imagebuild.rs"

[[example]]
name = "imagedelete"
path = "examples/imagedelete.rs"

[[example]]
name = "imageinspect"
path = "examples/imageinspect.rs"

[[example]]
name = "imagepull"
path = "examples/imagepull.rs"

[[example]]
name = "imagepull_auth"
path = "examples/imagepull_auth.rs"

[[example]]
name = "images"
path = "examples/images.rs"

[[example]]
name = "imagesearch"
path = "examples/imagesearch.rs"

[[example]]
name = "imagetag"
path = "examples/imagetag.rs"

[[example]]
name = "import"
path = "examples/import.rs"

[[example]]
name = "info"
path = "examples/info.rs"

[[example]]
name = "logs"
path = "examples/logs.rs"

[[example]]
name = "networkconnect"
path = "examples/networkconnect.rs"

[[example]]
name = "networkcreate"
path = "examples/networkcreate.rs"

[[example]]
name = "networkdelete"
path = "examples/networkdelete.rs"

[[example]]
name = "networkdisconnect"
path = "examples/networkdisconnect.rs"

[[example]]
name = "networks"
path = "examples/networks.rs"

[[example]]
name = "stats"
path = "examples/stats.rs"

[[example]]
name = "top"
path = "examples/top.rs"

[[example]]
name = "version"
path = "examples/version.rs"

[[example]]
name = "volumecreate"
path = "examples/volumecreate.rs"

[[example]]
name = "volumedelete"
path = "examples/volumedelete.rs"

[[example]]
name = "volumes"
path = "examples/volumes.rs"